Closed
Bug 473908
Opened 17 years ago
Closed 17 years ago
Too much recursion in nsCSSSelector::CalcWeight with lots of ":not()"
Categories
(Core :: CSS Parsing and Computation, defect, P4)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.9.2a1
People
(Reporter: jruderman, Assigned: dbaron)
References
Details
(Keywords: crash, testcase)
Attachments
(2 files)
373 bytes,
text/html
|
Details | |
5.13 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
I'm not sure how to reproduce this without "ulimit -s", since the parser gets really slow with larger input (possibly n^2).
Reporter | ||
Comment 1•17 years ago
|
||
ulimit -s 100 is not such a great idea if you're going to browse Bugzilla, since hunspell assumes you have a little more stack space than that. ulimit -s 300 is better.
Assignee | ||
Updated•17 years ago
|
Assignee: nobody → dbaron
Assignee | ||
Comment 2•17 years ago
|
||
No crashtest (I haven't actually even tested the crash, but it fixes the problem described), but I did add some related mochitests to test_cascade.html.
Attachment #357435 -
Flags: superreview?(bzbarsky)
Attachment #357435 -
Flags: review?(bzbarsky)
![]() |
||
Updated•17 years ago
|
Attachment #357435 -
Flags: superreview?(bzbarsky)
Attachment #357435 -
Flags: superreview+
Attachment #357435 -
Flags: review?(bzbarsky)
Attachment #357435 -
Flags: review+
Assignee | ||
Comment 3•17 years ago
|
||
Status: NEW → RESOLVED
Closed: 17 years ago
OS: Mac OS X → All
Priority: -- → P4
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Reporter | ||
Updated•17 years ago
|
Blocks: jesse-css-grammar-fuzzer
You need to log in
before you can comment on or make changes to this bug.
Description
•