Avoid recursion when handling mNegations in CalcWeight.  (Bug 473908)  r+sr=bzbarsky