layout/style/nsICSSStyleRule.h
@@ -163,7 +163,8 @@ public:
                     const nsString& aValue, PRBool aCaseSensitive);
   void SetOperator(PRUnichar aOperator);
 
-  PRInt32 CalcWeight(void) const;
+  // Calculate the specificity of this selector (not including its mNext!).
+  PRInt32 CalcWeight() const;
 
   void ToString(nsAString& aString, nsICSSStyleSheet* aSheet,
                 PRBool aAppend = PR_FALSE) const;
@@ -180,6 +181,9 @@ private:
   // happens if and only if the default namespace would apply to this
   // selector).
   PRBool CanBeNamespaced(PRBool aIsNegated) const;
+  // Calculate the specificity of this selector (not including its mNext
+  // or its mNegations).
+  PRInt32 CalcWeightWithoutNegations() const;
 
 public:
   PRInt32         mNameSpace;
